@@ -1,16 +1,13 @@
 package HomeWorkMiit.module5.number3;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        List<Person> personList = Collections.unmodifiableList(new ArrayList<>() {{
-            add(new Russian("Иван"));
-            add(new British("Adam"));
-            add(new Chinese("Lee"));
-        }});
+        List<Person> personList = List.of(
+                new Russian("Иван"),
+                new British("Adam"),
+                new Chinese("Lee"));
 
         for (Person person : personList) {
             System.out.println(person.sayHello());
